--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 }
 
 header {
+    width:100%;
     background: #333;
     color: white;
     padding: 0px 0;
@@ -258,6 +259,7 @@ nav ul li a:hover {
     100% { transform: translateY(0); }
 }
 .footer {
+    width:100%;
   background: #333;
   color: #fff;
   padding: 0px 0;
